--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="/style/index.css" />
     <title>nombre</title>
   </head>
   <body>
@@ -17,11 +17,43 @@
             <li><a href="/page/seccion2.html">seccion2</a></li>
           </ul>
         </nav>
-      </header>
+      </header>      
+      <section class="slider-container">
+        <h1>destacados</h1>
+        <div class="slider">
+          <div class="slider__card">
+            <img src="" alt="img">
+            <a href="enlace" class="slider__card-link">Producto 1</a>
+          </div>
+          <div class="slider__card">
+            <img src="" alt="img">
+            <a href="enlace" class="slider__card-link">Producto 2</a>
+          </div>
+          <div class="slider__card">
+            <img src="" alt="img">
+            <a href="enlace" class="slider__card-link">Producto 3</a>
+          </div>
+          <img src="" alt="img">
+          <div class="slider__card">
+            <img src="" alt="img">
+            <a href="enlace" class="slider__card-link">Producto 4</a>
+          </div>
+          <div class="slider__card">
+            <img src="" alt="img">
+            <a href="enlace" class="slider__card-link">Producto 5</a>
+          </div>
+          <div class="slider__card">
+            <img src="" alt="img">
+            <a href="enlace" class="slider__card-link">Producto 6</a>
+          </div>
+          <img src="" alt="img">
+        </div>
+      </section>
+      
 
-      <section></section>
+      <section>
 
-      <section></section>
+      </section>
     </main>
     <footer></footer>
     
