creacion seccion footer y seccion de subcripcion

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/style/index.css" />
+    <link
+      href="https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css"
+      rel="stylesheet"
+    />
     <title>nombre</title>
   </head>
   <body>
@@ -17,45 +21,101 @@
             <li><a href="/page/seccion2.html">seccion2</a></li>
           </ul>
         </nav>
-      </header>      
-      <section class="slider-container">
+      </header>
+      <section class="slider-container">  <!-- destacados -->
         <h1>destacados</h1>
         <div class="slider">
           <div class="slider__card">
-            <img src="" alt="img">
+            <img src="" alt="img" />
             <a href="enlace" class="slider__card-link">Producto 1</a>
           </div>
           <div class="slider__card">
-            <img src="" alt="img">
+            <img src="" alt="img" />
             <a href="enlace" class="slider__card-link">Producto 2</a>
           </div>
           <div class="slider__card">
-            <img src="" alt="img">
+            <img src="" alt="img" />
             <a href="enlace" class="slider__card-link">Producto 3</a>
           </div>
-          <img src="" alt="img">
+          <img src="" alt="img" />
           <div class="slider__card">
-            <img src="" alt="img">
+            <img src="" alt="img" />
             <a href="enlace" class="slider__card-link">Producto 4</a>
           </div>
           <div class="slider__card">
-            <img src="" alt="img">
+            <img src="" alt="img" />
             <a href="enlace" class="slider__card-link">Producto 5</a>
           </div>
           <div class="slider__card">
-            <img src="" alt="img">
+            <img src="" alt="img" />
             <a href="enlace" class="slider__card-link">Producto 6</a>
           </div>
-          <img src="" alt="img">
+          <img src="" alt="img" />
         </div>
       </section>
-      
 
-      <section>
-
+      <section class="subscription"> <!--subscripcion-->
+        <div class="subscription__image">
+         <img src="" alt="cofee">
+        </div>
+        <div class="subscription__content">
+          <h2 class="subscription__content">¡NO TE QUEDES SIN TU CAFÉ!</h2>
+          <h3 class="subscription__content">¡Suscríbete y ahorra!</h3>
+          <p>La mejor manera de comprar café.</p>
+          <p>
+            Si compras un producto periódicamente, ahora puedes utilizar nuestro
+            sistema de suscripción y ¡ahorrarás tiempo y dinero en próximas
+            compras!
+          </p>
+          <button> subcripcion</button>
+        </div>
       </section>
     </main>
-    <footer></footer>
-    
+    <footer>             <!-- redes-->
+      <div class="icon">
+        <svg heigth="80" width="80">
+          <circle
+            cx="40"
+            cy="40"
+            r="35"
+            stroke="white"
+            stroke-width="4"
+            fill="none"
+          ></circle>
+        </svg>
+        <i class="bx bxl-instagram"></i>
+      </div>
+
+      <div class="icon">
+        <svg heigth="80" width="80">
+          <circle
+            cx="40"
+            cy="40"
+            r="35"
+            stroke="white"
+            stroke-width="4"
+            fill="none"
+          ></circle>
+        </svg>
+        <i class="bx bxl-facebook-circle"></i>
+      </div>
+
+      <div class="icon">
+        <svg heigth="80" width="80">
+          <circle
+            cx="40"
+            cy="40"
+            r="35"
+            stroke="white"
+            stroke-width="4"
+            fill="none"
+          ></circle>
+        </svg>
+        <i class="bx bxl-whatsapp"></i>
+      </div>
+      <div class="home-footer">
+        <p>home</p>
+      </div>
+    </footer>
   </body>
 </html>
