correcion de etiquetas

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
          <img src="" alt="cofee">
         </div>
         <div class="subscription__content">
-          <h2 class="subscription__content">¡NO TE QUEDES SIN TU CAFÉ!</h2>
-          <h3 class="subscription__content">¡Suscríbete y ahorra!</h3>
+          <h2 class="subscription__content--h2">¡NO TE QUEDES SIN TU CAFÉ!</h2>
+          <h3 class="subscription__content--h3">¡Suscríbete y ahorra!</h3>
           <p>La mejor manera de comprar café.</p>
           <p>
             Si compras un producto periódicamente, ahora puedes utilizar nuestro
