correcion de footer

--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
           </ul>
         </nav>
       </header>
-      <section class="slider-container">  <!-- destacados -->
-        <h1>destacados</h1>
+
+      <section class="slider-container">
+        <!-- destacados -->
+        <h1 class="title-destacado">destacados</h1>
         <div class="slider">
           <div class="slider__card">
             <img src="" alt="img" />
@@ -54,10 +56,9 @@
         </div>
       </section>
 
-      <section class="subscription"> <!--subscripcion-->
-        <div class="subscription__image">
-         <img src="" alt="cofee">
-        </div>
+      <article class="subscription">
+        <!--subscripcion-->
+        <div class="subscription__image"></div>
         <div class="subscription__content">
           <h2 class="subscription__content--h2">¡NO TE QUEDES SIN TU CAFÉ!</h2>
           <h3 class="subscription__content--h3">¡Suscríbete y ahorra!</h3>
@@ -67,55 +68,68 @@
             sistema de suscripción y ¡ahorrarás tiempo y dinero en próximas
             compras!
           </p>
-          <button> subcripcion</button>
+          <button>subcripcion</button>
         </div>
-      </section>
+      </article>
+
+      <footer>
+        <!-- redes-->
+        <div class="icon">
+          <svg heigth="80" width="80">
+            <circle
+              cx="40"
+              cy="40"
+              r="35"
+              stroke="white"
+              stroke-width="4"
+              fill="none"
+            ></circle>
+          </svg>
+          <i class="bx bxl-instagram"></i>
+        </div>
+  
+        <div class="icon">
+          <svg heigth="80" width="80">
+            <circle
+              cx="40"
+              cy="40"
+              r="35"
+              stroke="white"
+              stroke-width="4"
+              fill="none"
+            ></circle>
+          </svg>
+          <i class="bx bxl-facebook-circle"></i>
+        </div>
+  
+        <div class="icon">
+          <svg heigth="80" width="80">
+            <circle
+              cx="40"
+              cy="40"
+              r="35"
+              stroke="white"
+              stroke-width="4"
+              fill="none"
+            ></circle>
+          </svg>
+          <i class="bx bxl-whatsapp"></i>
+        </div>
+        <div class="icon" id="#home">
+          <svg height="80" width="80">
+            <circle
+              cx="40"
+              cy="40"
+              r="35"
+              stroke="white"
+              stroke-width="4"
+              fill="none"
+            ></circle>
+          </svg>
+           <i class="bx bx-home"></i>
+        </div>
+      </footer>
     </main>
-    <footer>             <!-- redes-->
-      <div class="icon">
-        <svg heigth="80" width="80">
-          <circle
-            cx="40"
-            cy="40"
-            r="35"
-            stroke="white"
-            stroke-width="4"
-            fill="none"
-          ></circle>
-        </svg>
-        <i class="bx bxl-instagram"></i>
-      </div>
 
-      <div class="icon">
-        <svg heigth="80" width="80">
-          <circle
-            cx="40"
-            cy="40"
-            r="35"
-            stroke="white"
-            stroke-width="4"
-            fill="none"
-          ></circle>
-        </svg>
-        <i class="bx bxl-facebook-circle"></i>
-      </div>
-
-      <div class="icon">
-        <svg heigth="80" width="80">
-          <circle
-            cx="40"
-            cy="40"
-            r="35"
-            stroke="white"
-            stroke-width="4"
-            fill="none"
-          ></circle>
-        </svg>
-        <i class="bx bxl-whatsapp"></i>
-      </div>
-      <div class="home-footer">
-        <p>home</p>
-      </div>
-    </footer>
   </body>
 </html>
