--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>nombre</title>
   </head>
   <body>
-    <main>
+    <section>
       <header>
         <nav>
           <ul>
@@ -22,10 +22,9 @@
           </ul>
         </nav>
       </header>
-
-      <section class="slider-container">
-        <!-- destacados -->
-        <h1 class="title-destacado">destacados</h1>
+  
+      <section class="slider-container">          <!-- destacados -->
+        <h1 class="title-destacado">Destacados</h1>
         <div class="slider">
           <div class="slider__card">
             <img src="" alt="img" />
@@ -56,7 +55,7 @@
         </div>
       </section>
 
-      <article class="subscription">
+      <section class="subscription">
         <!--subscripcion-->
         <div class="subscription__image"></div>
         <div class="subscription__content">
@@ -68,18 +67,18 @@
             sistema de suscripción y ¡ahorrarás tiempo y dinero en próximas
             compras!
           </p>
-          <button>subcripcion</button>
+          <button class="button">subcripcion</button>
         </div>
-      </article>
-
+      </section>
+ </main>
       <footer>
         <!-- redes-->
         <div class="icon">
-          <svg heigth="80" width="80">
+          <svg>
             <circle
               cx="40"
               cy="40"
-              r="35"
+              r="30"
               stroke="white"
               stroke-width="4"
               fill="none"
@@ -89,11 +88,11 @@
         </div>
   
         <div class="icon">
-          <svg heigth="80" width="80">
+          <svg>
             <circle
               cx="40"
               cy="40"
-              r="35"
+              r="30"
               stroke="white"
               stroke-width="4"
               fill="none"
@@ -103,11 +102,11 @@
         </div>
   
         <div class="icon">
-          <svg heigth="80" width="80">
+          <svg>
             <circle
               cx="40"
               cy="40"
-              r="35"
+              r="30"
               stroke="white"
               stroke-width="4"
               fill="none"
@@ -116,11 +115,11 @@
           <i class="bx bxl-whatsapp"></i>
         </div>
         <div class="icon" id="#home">
-          <svg height="80" width="80">
+          <svg>
             <circle
               cx="40"
               cy="40"
-              r="35"
+              r="30"
               stroke="white"
               stroke-width="4"
               fill="none"
@@ -129,7 +128,7 @@
            <i class="bx bx-home"></i>
         </div>
       </footer>
-    </main>
+    
 
   </body>
 </html>
