creando seccion de comentarios

--- a/index.html
+++ b/index.html
@@ -72,6 +72,21 @@
           <button class="button">subcripcion</button>
         </div>
       </section>
+      
+      <section class="comentarios">
+        <div class="imagen">
+          <img src="https://www.pngarts.com/files/3/Avatar-Free-PNG-Image.png" alt="avatar">
+        </div>
+        <div class="input">
+          <label for=""></label>
+          <input  id="nuevo comentario" type="text" placeholder="nuevo comentario..">
+          <div class="btn-comentarios">
+            <button>comentar</button>
+
+          </div>
+
+        </div>
+      </section>
  </main>
    <!-- redes-->
       <footer>
