--- a/index.html
+++ b/index.html
@@ -82,11 +82,10 @@
       
       <section class="container">
         <div class="comentarios">
-        <div class="imagen">
-          <img src="https://www.pngarts.com/files/3/Avatar-Free-PNG-Image.png" height="30px" width="30px" alt="avatar" />
+        <div>
+          <img class="avatar__img" src="https://www.pngarts.com/files/3/Avatar-Free-PNG-Image.png" height="30px" width="30px" alt="avatar" />
         </div>
-        <div class="input">
-          <label for="nuevoComentario"></label>
+        <div class="input-comentario">
           <input id="nuevoComentario" type="text" placeholder="Nuevo comentario.." />
           <div class="btn-comentarios">
             <button>Comentar</button>
