--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <title>nombre</title>
+    <title>home</title>
   </head>
   <body>
     <main class="container">
@@ -22,8 +22,8 @@
         <nav>
           <ul>
             <li class="box"><a href="/index.html">home</a></li>
-            <li class="box"><a href="/page/seccion1.html">seccion1</a></li>
-            <li class="box"><a href="/page/seccion2.html">seccion2</a></li>
+            <li class="box"><a href="/page/seccion1.html">tienda</a></li>
+            <li class="box"><a href="/page/seccion2.html">contac</a></li>
           </ul>
         </nav>
       </header>
@@ -34,32 +34,32 @@
           <picture class="slider__card">
               <source media="(min-width: 800px)" srcset=""/>
               <source media="(min-width: 300px)" srcset=""/>
-            <img src="/assets/img/mobile/img/index/cafe-americano-min.jpg" height="220px"  width="300px" alt="americano" />
-            <a href="enlace" class="slider__card-link">Producto 1</a>
+            <img src="/assets/img/tipos-de-cafe/cafe-capuchino-cappuccino.jpeg" height="220px"  width="300px" alt="americano" />
+            <a href="enlace" class="slider__card-link">cappuccino</a>
           </picture>
           <picture class="slider__card">
             <source media="(min-width: 800px)" srcset=""/>
             <source media="(min-width: 300px)" srcset=""/>
-            <img src="/assets/img/mobile/img/index/cafe-breve-min.jpg"  height="220px"  width="300px" alt="breve" />
-            <a href="enlace" class="slider__card-link">Producto 2</a>
+            <img src="/assets/img/tipos-de-cafe/cafe-caramel-macchiato.jpeg"  height="220px"  width="300px" alt="breve" />
+            <a href="enlace" class="slider__card-link">caramel-macchiato</a>
           </picture>
           <picture class="slider__card">
             <source media="(min-width: 800px)" srcset=""/>
             <source media="(min-width: 350px)" srcset=""/>
-            <img src="/assets/img/mobile/img/index/cafe-doppio-cafe-doble-min.jpg"  height="220px"  width="300px" alt="doppio" />
-            <a href="enlace" class="slider__card-link">Producto 3</a>
+            <img src="/assets/img/tipos-de-cafe/cafe-irlandes.jpeg"  height="220px"  width="300px" alt="doppio" />
+            <a href="enlace" class="slider__card-link">cafe-irlandes</a>
           </picture>
           <picture class="slider__card">
           <source media="(min-width: 800px)" srcset=""/>
           <source media="(min-width: 350px)" srcset=""/>
-          <img src="/assets/img/mobile/img/index/machado,adove.jpg"  height="220px"  width="300px" alt="machado" />
-          <a href="enlace" class="slider__card-link">Producto 4</a>
+          <img src="/assets/img/tipos-de-cafe/cafe-mocca.jpg"  height="220px"  width="300px" alt="machado" />
+          <a href="enlace" class="slider__card-link">cafe-mocca</a>
         </picture>
           <picture class="slider__card">
             <source media="(min-width: 800px)" srcset=""/>
             <source media="(min-width: 350px)" srcset=""/>
-            <img src="/assets/img/mobile/img/index/cafe-vienes-min.jpg"  height="220px"  width="300px" alt="vienes" />
-            <a href="enlace" class="slider__card-link">Producto 5</a>
+            <img src="/assets/img/tipos-de-cafe/cafe-vienes.jpeg"  height="220px"  width="300px" alt="vienes" />
+            <a href="enlace" class="slider__card-link">cafe-vienes</a>
           </picture>
       </article>
         
@@ -164,6 +164,5 @@
       </footer>
     </main>
    <script src="/script/comentarios.js"></script>
-   <script src="/script/animation.js"></script>
   </body>
 </html>
